@@ -92,6 +92,7 @@ where XXXXXX is the bug number as listed below.
 360752  raise the number of reserved fds in m_main.c from 10 to 12
 361354  ppc64[le]: wire up separate socketcalls system calls
 361226  s390x: risbgn (EC59) not implemented
+361926  Unhandled Solaris syscall: sysfs(84)
 
 n-i-bz Fix incorrect (or infinite loop) unwind on RHEL7 x86 and amd64
 n-i-bz massif --pages-as-heap=yes does not report peak caused by mmap+munmap
